--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <h1>
         check1
     </h1>
-    <img src="./logos/cs.png" width="40" height="40" alt="cs">
+    <p>
+        <img style="object-fit: cover;" src="./logos/cs.png" width="150" height="150" alt="cs">
+        <img style="object-fit: cover;" src="./logos/java.png" width="150" height="150" alt="cs">
+        <img style="object-fit: cover;" src="./logos/docker.png" width="150" height="150" alt="cs">
+      </p>
 </body>
 </html>
 
