--- a/cv/cv_mikolaj_semeniuk_pl.html
+++ b/cv/cv_mikolaj_semeniuk_pl.html
@@ -147,16 +147,16 @@
                         dynamiczne wysyłanie danych, wyświetlanie requestów do <b>API</b>
                     </li>
                     <li class="skills">
-                        Znajomość języków takich jak <b>NodeJS</b>, <b>GoLang</b> oraz frameworków <b>ExpressJS</b> oraz <b>Go-GIN</b>
+                        Bardzo dobra znajomość języków takich jak <b>NodeJS</b>, <b>GoLang</b> oraz frameworków <b>ExpressJS</b> oraz <b>Go-GIN</b>
                     </li>
                     <li class="skills">
-                        Znajomość praktyk pisania dobrego kodu <b>Uncle Boba</b>, zasad <b>SOLID</b> oraz znajomość wzorców projektowych jak np. <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, <b>Fabryka</b> 
+                        Bardzo dobra znajomość praktyk pisania <b>Clean Code</b> <b>Uncle Bob's</b>, zasad <b>SOLID</b>, <b>DDD</b>, <b>TDD</b> oraz znajomość wzorców projektowych jak np. <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, <b>Fabryka</b> 
                     </li>
                     <li class="skills">
-                        Świetna znajomość relacyjnych baz danych takich jak: <b>SQL Server</b>, <b>MySQL</b>, <b>PostgresSQL</b>
+                        Bardzo dobra znajomość relacyjnych baz danych takich jak: <b>SQL Server</b>, <b>MySQL</b>, <b>PostgresSQL</b>
                     </li>
                     <li class="skills">
-                        Świetna znajomość nierelacyjnych baz danych takich jak: <b>MongoDB</b>, <b>Redis</b>, słaba <b>Apache Cassandra</b>
+                        Bardzo dobra znajomość nierelacyjnych baz danych takich jak: <b>MongoDB</b>, <b>Redis</b>, słaba <b>Apache Cassandra</b>
                     </li>
                     <li class="skills">
                         Umiejętność pisania testów jednostkowych i testów przy użyciu frameworka <b>Selenium</b>
@@ -165,8 +165,7 @@
                         Bardzo dobra znajomość <b>języka angielskiego</b>
                     </li>
                     <li class="skills">
-                        Świetna znajomość środowisk takich jak:
-                        <b>Visual Studio</b>, <b>Intellij</b>, <b>Visual Studio Code</b> oraz <b>Google Colab</b>, <b>Jupyter notebook</b> oraz <b>Conda</b>
+                        Świetna znajomość środowisk takich jak: <b>Visual Studio</b>, <b>Intellij</b>, <b>Visual Studio Code</b>, <b>Google Colab</b>, <b>Jupyter notebook</b> oraz <b>Conda</b>
                     </li>
                 </ul>
             </div>
