--- a/cv/cv_mikolaj_semeniuk_en.html
+++ b/cv/cv_mikolaj_semeniuk_en.html
@@ -299,7 +299,7 @@
                                 File validation in terms of business logic
                             </li>
                             <li class = "responsabilities">
-                                Coding, reading and saving a large number of files (mainly excel files) on the server
+                                Uploading, reading and saving a large number of files (mainly excel files) on the server
                             </li>
                             <li class = "responsabilities">
                                 Sending emails to customers who are in arrears with payment of their debts
