fix cv en issue

--- a/cv/cv_mikolaj_semeniuk_en.html
+++ b/cv/cv_mikolaj_semeniuk_en.html
@@ -240,29 +240,6 @@
                         2020.12-<br>
                         2020.11
                     </div>
-                    <div class="description">
-                        Analiza danych dla wewnętrznego narzędzia <b>IPD</b> firmy <b>EY</b> do rozpoznawania procesów biznesowych. Do moich obowiązków należało:
-                        <ul>
-                            <li class="responsabilities">
-                                Czyszczenie i przygotowanie zebranych danych
-                            </li>
-                            <li class="responsabilities">
-                                Analiza danych przy użyciu <b>pythona 3.7</b>, <b>sklearn</b>, <b>pandas</b>, <b>numpy</b>, <b>matplotib</b> oraz <b>seaborn</b>
-                            </li>
-                            <li class="responsabilities">
-                                Wykrywanie cech za pomocą algorytmów z pakietu <b>sklearn</b> takich jak <b>PCA</b>, <b>K-means</b> oraz <b>K Nearest Neighbors</b>
-                            </li>
-                            <li class="responsabilities">
-                                Budowanie modeli uczenia się struktury danych przy użyciu <b>pytorch</b> i <b>tensorflow</b> takich jak <b>Autoenkodery</b>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="content">
-                    <div class="date">
-                        2020.11-<br>
-                        2020.05
-                    </div>
                     <div class = "description">
                         Data analysis for <b>EY</b> internal <b>EY</b> business process recognition tool. I was responsible for:
                         <ul>
@@ -277,6 +254,54 @@
                             </li>
                             <li class = "responsabilities">
                                 Building data structure learning models using <b>Pytorch</b> and <b>tensorflow</b> such as <b>Autoencoders</b>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class = "content">
+                    <div class = "date">
+                        2020.11- <br>
+                        2020.05
+                    </div>
+                    <div class = "description">
+                        Implementation of new functionalities and modernization of the internal portal of the company from the United States dealing with the production of prostheses. I was responsible for:
+                        <ul>
+                            <li class = "responsabilities">
+                                Adding new functionalities contained on the portal: <b> Jira </b> and <b> Confluence </b> in accordance with the <b> Scrum </b> methodology
+                            </li>
+                            <li class = "responsabilities">
+                                Communicating with <b> Business Analysts </b> and <b> Scrum Master </b> from the United States in English
+                            </li>
+                            <li class = "responsabilities">
+                                Implementation of <b> API </b> endpoints using <b> Asp Net Core Mvc </b> compatible with the <b> Controller, Service, IService </b> pattern
+                            </li>
+                            <li class = "responsabilities">
+                                Implementing user rights and roles and generating authentication tokens using <b> OAuth2 </b> and <b> Asp Net Identity </b> and <b> Identity Server 4 </b>
+                            </li>
+                            <li class = "responsabilities">
+                                Communication configuration between <b> microservices </b> using <b> RabbitMQ </b> and <b> MassTransit </b>
+                            </li>
+                            <li class = "responsabilities">
+                                Implementation of writes and reads to the <b> SQL Server </b> relational database and <b> Redis </b> NoSQL database
+                            </li>
+                            <li class = "responsabilities">
+                                Sending and receiving <b> GRAPHQL </b> requests using the <b> Hot Chocolate </b> framework and <b> REST </b> requests
+                            </li>
+                            <li class = "responsabilities">
+                                Upload files using requests
+                            </li>
+                            <li class = "responsabilities">
+                                Creating new branches, resolving merge conflicts and adding changes to the repository via <b> Git </b> version control versions,
+                                and <b> Azure Dev Ops </b>
+                            </li>
+                            <li class = "responsabilities">
+                                Writing unit tests with <b> xUnit </b> and <b> Moq </b>
+                            </li>
+                            <li class = "responsabilities">
+                                Testing <b> API </b> with <b> Postman </b>, <b> Insomnii </b> and <b> Swagger </b>
+                            </li>
+                            <li class = "responsabilities">
+                                Writing and reading technical documentation
                             </li>
                         </ul>
                     </div>
