--- a/cv/cv_mikolaj_semeniuk_en.html
+++ b/cv/cv_mikolaj_semeniuk_en.html
@@ -152,7 +152,7 @@
                         Very good knowledge of the practices of writing <b>Clean Code</b> <b>Uncle Bob's</b>, <b>SOLID</b> principles, <b>DDD</b>, <b>TDD</b> and knowledge of design patterns such as <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, <b>Fabric</b>
                     </li>
                     <li class="skills">
-                        Very good knowledge of relational databases such as: <b>SQL Server</b>, <b>MySQL</b>, <b>PostgresSQL</b>
+                        Very good knowledge of relational databases such as: <b>SQL Server</b> with <b>SQL Queries</b>, <b>Stored Procedures</b>, <b>Triggers</b> and <b>MySQL</b>, <b>PostgresSQL</b>
                     </li>
                     <li class="skills">
                         Very good knowledge of non-relational databases such as: <b>MongoDB</b>, <b>Redis</b>, poor <b>Apache Cassandra</b>
