--- a/cv/cv_mikolaj_semeniuk_pl.html
+++ b/cv/cv_mikolaj_semeniuk_pl.html
@@ -153,7 +153,7 @@
                         Bardzo dobra znajomość praktyk pisania <b>Clean Code</b> <b>Uncle Bob's</b>, zasad <b>SOLID</b>, <b>DDD</b>, <b>TDD</b> oraz znajomość wzorców projektowych jak np. <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, <b>Fabryka</b> 
                     </li>
                     <li class="skills">
-                        Bardzo dobra znajomość relacyjnych baz danych takich jak: <b>SQL Server</b>, <b>MySQL</b>, <b>PostgresSQL</b>
+                        Bardzo dobra znajomość relacyjnych baz danych, takich jak: <b>SQL Server</b> z <b>zapytaniami SQL</b>, <b>procedurami składowanymi</b>, <b>wyzwalaczami</b> i <b >MySQL</b>, <b>PostgresSQL</b>
                     </li>
                     <li class="skills">
                         Bardzo dobra znajomość nierelacyjnych baz danych takich jak: <b>MongoDB</b>, <b>Redis</b>, słaba <b>Apache Cassandra</b>
