--- a/cv/cv_mikolaj_semeniuk_en.html
+++ b/cv/cv_mikolaj_semeniuk_en.html
@@ -172,7 +172,8 @@
         <main>
             <p>
                 I am currently an extramural 3rd year student in <b>Data Science</b>. I have almost <b>three years of experience</b> in developing web applications mainly in languages such as <b>Java</b> and <b>C #</b> and data analysis using <b>Python</b>. <br> <br>
-                In my spare time I read books about data analysis, especially about unsupervised learning, and I learn new languages and upload projects to <b>GitHuba</b>, <b>Google Colab</b>, I also participate in <b>StackOverflow</b>
+                In my spare time I read books about data analysis, especially about unsupervised learning, and I learn new languages and upload projects to <b>GitHuba</b>, <b>Google Colab</b>, I also participate in <b>StackOverflow</b>.<br><br>
+                Apart from my <b>CV</b>, please also check my <b>GitHub</b>
             </p>
             <h2>
                 Experience
