--- a/cv/cv_mikolaj_semeniuk_pl.html
+++ b/cv/cv_mikolaj_semeniuk_pl.html
@@ -173,7 +173,8 @@
         <main>
             <p>
                 Obecnie jestem zaocznym studentem trzeciego roku na specjalizacji <b>Data Science</b>. Posiadam prawie <b>Trzyletnie doświadczenie</b> w rozwijaniu aplikacji webowych głównie w językach takich jak <b>Java</b> oraz <b>C#</b> oraz analizy danych przy użyciu języka <b>Python</b>.<br><br>
-                W wolnych chwilach czytam książki o analizie danych, szczególnie o uczeniu nienadzorowanym, oraz uczę się nowych języków i wrzucam projekty na <b>GitHuba</b>, <b>Google Colab</b>, udzielam się również na <b>StackOverflow</b>
+                W wolnych chwilach czytam książki o analizie danych, szczególnie o uczeniu nienadzorowanym, oraz uczę się nowych języków i wrzucam projekty na <b>GitHuba</b>, <b>Google Colab</b>, udzielam się również na <b>StackOverflow</b>.<br><br>
+                Proszę prócz mojego <b>CV</b> sprawdzić również mojego <b>GitHuba</b>
             </p>
             <h2>
                 Doświadczenie
