--- a/cv/cv_mikolaj_semeniuk_en.html
+++ b/cv/cv_mikolaj_semeniuk_en.html
@@ -146,10 +146,13 @@
                         Very good knowledge of <b>VueJS</b> and <b>AngularJS</b> frameworks, frontend application <b>state management</b>, dynamic data sending, displaying <b>API requests</b>
                     </li>
                     <li class="skills">
-                        Very good knowledge of languages ​​such as <b>NodeJS</b>, <b>GoLang</b> and <b>ExpressJS</b> and <b>Go-GIN</b>frameworks
+                        Very good knowledge of <b>NodeJS</b> with <b>Typescript</b>, <b>ExpressJS</b>, <b>NestJS</b> and <b>TypeORM</b>
                     </li>
                     <li class="skills">
-                        Very good knowledge of the practices of writing <b>Clean Code</b> <b>Uncle Bob's</b>, <b>SOLID</b> principles, <b>DDD</b>, <b>TDD</b> and knowledge of design patterns such as <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, <b>Fabric</b>
+                        Very good knowledge of <b>Go</b> with <b>Go-Gin</b>, <b>GORM</b>, <b>GRPC</b>
+                    </li>
+                    <li class="skills">
+                        Very good knowledge of the practices of writing <b>Clean Code</b> <b>Uncle Bob's</b>, <b>SOLID</b> principles, <b>DDD</b>, <b>TDD</b>, <b>YARNI</b>, <b>DRY</b>, <b>KISS</b> and knowledge of design patterns such as <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, <b>Fabric</b>
                     </li>
                     <li class="skills">
                         Very good knowledge of relational databases such as: <b>SQL Server</b> with <b>SQL Queries</b>, <b>Stored Procedures</b>, <b>Triggers</b> and <b>MySQL</b>, <b>PostgresSQL</b>
@@ -418,7 +421,22 @@
                         2019.10
                     </div>
                     <div class="description">
-                        In 2019, I started my studies at the Warsaw School of Computer Science in extramural mode, specializing in <b>Data Science</b>. I am currently in my third year and I am starting an engineering thesis about generating synthetic data by the Deep Belief Network model <b>(Deep Belief Network)</b>
+                        In 2019, I started my studies at the Warsaw School of Computer Science in extramural mode, specializing in <b>Data Science</b>. I am currently in my third year and I am starting an engineering thesis about generating synthetic data by the Deep Belief Network model <b>(Deep Belief Network)</b>.<br><br>Some of my university projects were:
+                        <li class="responsabilities">
+                            Writing artificial neuronal network from scratch using <b>Numpy</b> in <b>C#</b> language
+                        </li>
+                        <li class="responsabilities">
+                            Creating <b>unsupervised nlp algorithms/models</b> to classify text in python and <b>PyTorch/Scikit</b>
+                        </li>
+                        <li class="responsabilities">
+                            Creating <b>CQRS</b> in <b>C#</b> using <b>Identity Server 4</b> and <b>RabbitMQ</b>
+                        </li>
+                        <li class="responsabilities">
+                            Creating application based on client and server using <b>Golang</b>, <b>GORM</b> and <b>GRPC</b>
+                        </li>
+                        <li class="responsabilities">
+                            Creating application using <b>Go</b> with <b>Go-Gin</b>, <b>GORM</b> and <b>ReactJS</b>
+                        </li>
                     </div>
                 </div>
             </div>
