--- a/cv/cv_mikolaj_semeniuk_pl.html
+++ b/cv/cv_mikolaj_semeniuk_pl.html
@@ -147,7 +147,10 @@
                         dynamiczne wysyłanie danych, wyświetlanie requestów do <b>API</b>
                     </li>
                     <li class="skills">
-                        Bardzo dobra znajomość języków takich jak <b>NodeJS</b>, <b>GoLang</b> oraz frameworków <b>ExpressJS</b> oraz <b>Go-GIN</b>
+                        Bardzo dobra znajomość <b>NodeJS</b> z <b>Typescript</b>, <b>ExpressJS</b>, <b>NestJS</b> i <b>TypeORM</b>
+                    </li>
+                    <li class="skills">
+                        Bardzo dobra znajomość <b>Go</b> z <b>Go-Gin</b>, <b>GORM</b>, <b>GRPC</b>
                     </li>
                     <li class="skills">
                         Bardzo dobra znajomość praktyk pisania <b>Clean Code</b> <b>Uncle Bob's</b>, zasad <b>SOLID</b>, <b>DDD</b>, <b>TDD</b> oraz znajomość wzorców projektowych jak np. <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, <b>Fabryka</b> 
@@ -420,6 +423,21 @@
                     </div>
                     <div class="description">
                         W 2019 roku rozpocząłem naukę w Warszawskiej Wyższej Szkole Informatyki w trybie zaocznym na specjalizacji <b>Data Science</b>. Obecnie jestem na trzecim roku i rozpoczynam pisanie pracy inżynierskiej o generowaniu syntetycznych danych przez model Sieci głębokiego przekonania <b>(Deep Belief Network)</b>
+                        <li class="responsabilities">
+                            Napisanie sztucznej sieci neuronowej od podstaw przy użyciu <b>Numpy</b> w języku <b>C#</b>
+                        </li>
+                        <li class="responsabilities">
+                            Tworzenie <b>nienadzorowanych algorytmów/modeli nlp</b> do klasyfikowania tekstu w Pythonie i <b>PyTorch/Scikit</b>
+                        </li>
+                        <li class="responsabilities">
+                            Tworzenie <b>CQRS</b> w <b>C#</b> przy użyciu <b>Identity Server 4</b> i <b>RabbitMQ</b>
+                        </li>
+                        <li class="responsabilities">
+                            Tworzenie aplikacji w oparciu o klienta i serwer przy użyciu <b>Golang</b>, <b>GORM</b> i <b>GRPC</b>
+                        </li>
+                        <li class="responsabilities">
+                            Tworzenie aplikacji za pomocą <b>Go</b> z <b>Go-Gin</b>, <b>GORM</b> i <b>ReactJS</b>
+                        </li>
                     </div>
                 </div>
             </div>
