--- a/cv/cv_mikolaj_semeniuk_pl.html
+++ b/cv/cv_mikolaj_semeniuk_pl.html
@@ -153,10 +153,12 @@
                         Bardzo dobra znajomość <b>Go</b> z <b>Go-Gin</b>, <b>GORM</b>, <b>GRPC</b>
                     </li>
                     <li class="skills">
-                        Bardzo dobra znajomość praktyk pisania <b>Clean Code</b> <b>Uncle Bob's</b>, zasad <b>SOLID</b>, <b>DDD</b>, <b>TDD</b> oraz znajomość wzorców projektowych jak np. <b>CQRS</b>, <b>CQS</b>, <b>MVC</b>, <b>Fabryka</b> 
+                        Bardzo dobra znajomość praktyk pisania <b>Clean Code</b> <b>Uncle Bob's</b>, <b>SOLID</b>, <b>DDD</b>, <b>TDD </b>,
+                        <b>YARNI</b>, <b>DRY</b>, <b>KISS</b> oraz znajomość wzorców projektowych, takich jak <b>CQRS</b>, <b> CQS</b>,
+                        <b>MVC</b>, <b>SOA</b>
                     </li>
                     <li class="skills">
-                        Bardzo dobra znajomość relacyjnych baz danych, takich jak: <b>SQL Server</b> z <b>zapytaniami SQL</b>, <b>procedurami składowanymi</b>, <b>wyzwalaczami</b> i <b >MySQL</b>, <b>PostgresSQL</b>
+                        Bardzo dobra znajomość relacyjnych baz danych, takich jak: <b>SQL Server</b> z <b>zapytaniami SQL</b>, <b>procedurami składowanymi</b>, <b>wyzwalaczami</b>, <b>Indeksami</b> i <b >MySQL</b>, <b>PostgresSQL</b>
                     </li>
                     <li class="skills">
                         Bardzo dobra znajomość nierelacyjnych baz danych takich jak: <b>MongoDB</b>, <b>Redis</b>, słaba <b>Apache Cassandra</b>
