--- a/cv/cv_mikolaj_semeniuk_en.html
+++ b/cv/cv_mikolaj_semeniuk_en.html
@@ -202,7 +202,7 @@
                     </li>
                     <li class="skills">
                         Very good knowledge of of environments such as: <b>Visual Studio</b>, <b>Intellij</b>, <b>Visual
-                            Studio Code</b>, <b>Google Colab</b>, <b>Jupyter notebook</b> oraz <b>Conda</b>
+                            Studio Code</b>, <b>Google Colab</b>, <b>Jupyter notebook</b> and <b>Conda</b>
                     </li>
                 </ul>
             </div>
