--- a/tmpl/new.html
+++ b/tmpl/new.html
@@ -87,6 +87,10 @@
         .responsibility {
             margin: 20px 0px;
         }
+
+        footer {
+            grid-column: 1 / 3;
+        }
     </style>
 </head>
 
@@ -525,7 +529,54 @@
                 </ul>
             </div>
         </div>
+        <h2>Education</h2>
+        <hr>
+        <h3>
+            Warsaw School of Computer Science
+        </h3>
+        <div class="content">
+            <div class="date">
+                Present-<br>
+                2019.10
+            </div>
+            <div>
+                <header>
+                    In 2019, I started my studies at the Warsaw School of Computer Science in extramural mode,
+                    specializing in <b>Data Science</b>. I am currently in my third year and I am starting an
+                    engineering thesis about generating synthetic data by the Deep Belief Network model. Some of my
+                    university projects were:
+                </header>
+                <ul class="description">
+                    <li class="responsibility">
+                        Writing artificial neuronal network from scratch using <b>Numpy</b> in <b>C#</b>
+                        language
+                    </li>
+                    <li class="responsibility">
+                        Creating <b>unsupervised nlp algorithms/models</b> to classify text in python and
+                        <b>PyTorch/Scikit</b>
+                    </li>
+                    <li class="responsibility">
+                        Creating <b>CQRS</b> in <b>C#</b> using <b>Identity Server 4</b> and <b>RabbitMQ</b>
+                    </li>
+                    <li class="responsibility">
+                        Creating application based on client and server using <b>Golang</b>, <b>GORM</b> and
+                        <b>GRPC</b>
+                    </li>
+                    <li class="responsibility">
+                        Creating application using <b>Go</b> with <b>Go-Gin</b>, <b>GORM</b> and <b>ReactJS</b>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </main>
+    <footer>
+        I consent to the processing of my personal data for the purposes of the recruitment process
+        (in accordance with the Act of May 10, 2018 on the protection of personal data (Journal of Laws of 2018, item
+        1000)
+        and in accordance with Regulation (EU) 2016/679 of the European Parliament and of the Council of 27 April 2016.
+        on the protection of individuals with regard to the processing of personal data
+        and on the free movement of such data and the repeal of Directive 95/46 / EC (GDPR).
+    </footer>
 </body>
 
 </html>
